--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
   "name": "rjames",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "http-server -p 3000",
-    "prefix-build": "postcss --use autoprefixer *.css -d dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prefix-build": "postcss --use autoprefixer *.css -d dist/css"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rmjames/rjames.git"
   },
-  "keywords": [],
-  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/rmjames/rjames/issues"
@@ -25,13 +20,12 @@
     "browser-sync": "^2.18.8",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-csso": "^2.0.0",
+    "gulp-htmlmin": "^3.0.0",
     "gulp-postcss": "^6.3.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.1",
-    "http-server": "^0.9.0",
+    "gulp-uglify": "^2.0.1",
     "node-sass": "^4.5.0"
-  },
-  "dependencies": {
-    "uuid": "^3.0.1"
   }
 }
