--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-uglify": "^2.0.1",
-    "node-sass": "^4.5.0"
+    "node-sass": "^4.5.0",
+    "rename": "^1.0.4"
   }
 }
