--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "browser-sync": "^2.29.3"
+    "autoprefixer": "^10.4.14",
+    "browser-sync": "^2.29.3",
+    "postcss": "^8.4.24",
+    "postcss-cli": "^10.1.0"
+  },
+  "devDependencies": {
+    "cssnano": "^6.0.1"
   }
 }
