--- a/manifest.json
+++ b/manifest.json
@@ -6,19 +6,19 @@
    "orientation": "any",
    "icons": [
         {
-            "src": "/favicon-144.png",
+            "src": "/favicon_144.png",
             "sizes": "144x144",
             "type": "image/png",
             "purpose": "any"
         },
         {
-            "src": "/favicon-192.png",
+            "src": "/favicon_192.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "any"
         },
         {
-            "src": "/favicon-512.png",
+            "src": "/favicon_512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "maskable"
