fix a11y on UL -> LI

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 { 
    "lang": "en-US",
+   "dir": "ltr",
    "name": "Robert James",
    "short_name": "RobertJames",
    "description": "Portfolio for Robert James",
