--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -2,10 +2,14 @@
 name: Deploy static content to Pages
 
 on:
-  # Runs on pushes targeting the default branch
+  # Runs on pushes targeting the deploy branch and feature branches
   push:
     branches: 
     - "2023"
+    - 'feature/**'
+    - 'feat/**'
+    - 'hotfix/**'
+    - 'release/**'
 
   pull_request:
     branches:
