--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "devDependencies": {
     "cssnano": "^6.0.1",
+    "http-server": "^14.1.1",
     "jsdom": "^27.0.0",
+    "playwright": "^1.45.3",
     "vitest": "^3.2.4"
   }
 }
