--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Redesign for 2023",
   "main": "sw.js",
   "scripts": {
-    "start": "http-server -p 3000",
+    "dev": "vite",
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "test": "vitest",
     "e2e": "playwright test"
   },
@@ -12,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "^10.4.14",
+    "baseline-browser-mapping": "^2.8.31",
     "browser-sync": "^3.0.4",
     "postcss": "^8.4.24",
     "postcss-cli": "^10.1.0"
@@ -22,6 +26,7 @@
     "http-server": "^14.1.1",
     "jsdom": "^27.0.0",
     "playwright": "^1.45.3",
+    "postcss-import": "^16.1.1",
     "vitest": "^3.2.4"
   }
 }
