--- a/manifest.json
+++ b/manifest.json
@@ -31,9 +31,9 @@
       "url": "/resume.html",
       "icons": [
         {
-          "src": "/favicon_192.png",
-          "sizes": "192x192",
-          "type": "image/png"
+          "src": "/resume_icon.svg",
+          "sizes": "192x192 any",
+          "type": "image/svg+xml"
         }
       ]
     },
@@ -43,9 +43,9 @@
       "url": "/lab.html",
       "icons": [
         {
-          "src": "/favicon_192.png",
-          "sizes": "192x192",
-          "type": "image/png"
+          "src": "/lab_icon.svg",
+          "sizes": "192x192 any",
+          "type": "image/svg+xml"
         }
       ]
     }
